k8s/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: speedtest-tracker
  name: speedtest-tracker
spec:
  ports:
    - port: 80
  selector:
    app: speedtest-tracker
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: speedtest-postgres
  type: ClusterIP
